--- a/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_teaser.html
@@ -9,7 +9,7 @@
     {% endif %}
 
     {% if document.description %}
-      <p class="description">{{ document.description }}</p>
+      <div class="description html-content">{{ document.description }}</div>
     {% endif %}
 
     {% if document.author %}
