--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_detail.html
@@ -11,18 +11,19 @@
   {% include 'medialibrary/media_detail_header.html' %}
 
   {% if media.image %}
+  <div class="media-content">
   <a href="{{ media.content_url }}"
   {% if media.new_window %}target="_blank"{% endif%}>
     <img src="{% version media.image.path 'thumbnail' %}"/>
-  </a>
+  </a></div>
   {% endif %}
 
-  <div><span class="download_link">
+  <div class="action-content download_link">
     <a href="{{ media.content_url }}" {% if media.new_window %}target="_blank"{% endif%}>
     {% trans "Open external content"%} {% if media.new_window %}{% trans " (in new window)"%}{% endif%}
     </a>
-  </span></div>
-  <div><span class="html-text">{{ media.description|safe }}</span></div>
+  </div>
+  <div class="html-content">{{ media.description|safe }}</div>
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
