--- a/cyclope/apps/medialibrary/templates/medialibrary/media_detail_footer.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_detail_footer.html
@@ -1,5 +1,5 @@
 {% load i18n comments %}
 
   {% if media.tags %}
-  <div><span class="tags"><span class="tags-label">{% trans "Tags" %}:</span> {{ media.tags }}</span></div>
+  <div class="meta-content"><span class="tags"><span class="tags-label">{% trans "Tags" %}:</span> {{ media.tags }}</span></div>
   {% endif %}
