--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
@@ -14,7 +14,7 @@
   {% assign player_height '320' %}
   {% include 'medialibrary/media_player.html' %}
 
-  <div><span class="html-text">{{ media.description|safe }}</span></div>
+  <div class="html-content">{{ media.description|safe }}</div>
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
