--- a/cyclope/templates/comments/comments_block.html
+++ b/cyclope/templates/comments/comments_block.html
@@ -18,9 +18,9 @@
       {% render_comment_list for current_object %}
       <!--enviar comentario -->
 
-      <a name="comments" href="#comments" id="show_comment_form">
+      <div class="action-content show_comment_form"><a name="comments" href="#comments" id="show_comment_form">
         {% trans "comment on this content" %}
-      </a>
+      </a></div>
 
       <div class="box-top"></div>
       <div class="box">
