--- a/cyclope/templates/comments/form.html
+++ b/cyclope/templates/comments/form.html
@@ -21,7 +21,7 @@
 
     {% endif %}
   {% endfor %}
-  <p class="submit">
+  <div class="submit action-content submit-comment">
     <input type="submit" name="post" class="submit" value="{% trans "Post your comment" %}" />
-  </p>
+  </div>
 </form>
