--- a/cyclope/templates/comments/preview.html
+++ b/cyclope/templates/comments/preview.html
@@ -30,9 +30,9 @@
         </p>
       {% endif %}
     {% endfor %}
-    <p class="submit">
+    <div class="submit action-content preview-comment">
     <input type="submit" name="submit" class="submit" value="{% trans "Post" %}" />
-    </p>
+    </div>
   </form>
 </div>
 </div>
