--- a/cyclope/templates/cyclope/menu_menuitems_hierarchy.html
+++ b/cyclope/templates/cyclope/menu_menuitems_hierarchy.html
@@ -10,7 +10,7 @@
     $(this).children('ul').css('display', 'block');
   });
 
-  $('#menu-principal_menu ul li').mouseleave(function() {
+  $('#{{ menu_slug }}_menu ul li').mouseleave(function() {
     $(this).children('ul').css('display', 'none');
   });
 });
