--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -4,7 +4,7 @@
 
     <div class="pretitle-container first meta-content">
       {% if  article.pretitle and not simplified_view %}
-      <span class="pretitle">{{ article.pretitle }} | </span>
+      <span class="pretitle">{{ article.pretitle }}<span class="pretitle-separator"> | </span></span>
       {% endif%}
       {% if article.date %}
       <span class="date">{{ article.date }}</span>
@@ -19,7 +19,7 @@
       </a></div>
     {% endif %}
 
-    <div class="summary">
+    <div class="summary html-content">
       {% if article.summary %}
         {{ article.summary }}
       {% else %}
@@ -37,7 +37,7 @@
         {% endif %}
 
       {% endif %}
-      <a href="{% url article-detail article.slug %}"> {% trans "More" %}</a>
+      <span class="more"><a href="{% url article-detail article.slug %}"> {% trans "More" %}</a></span>
     </div>
 
     {% if not simplified_view %}
