--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
@@ -21,9 +21,9 @@
     </object>
   </div>
 
-  <div><span class="download_link"><a target="_blank" href="{{ media.flash }}">{% trans "full screen view (new window)"%}</a></span></div>
+  <div class="action-content"><span class="download_link"><a target="_blank" href="{{ media.flash }}">{% trans "full screen view (new window)"%}</a></span></div>
 
-  <div><span class="html-text">{{ media.description|safe }}</span></div>
+  <div class="html-content description">{{ media.description|safe }}</div>
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
