--- a/cyclope/apps/medialibrary/templates/medialibrary/picture_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/picture_detail.html
@@ -10,9 +10,9 @@
 
   {% include 'medialibrary/media_detail_header.html' %}
 
-  <div class="detail_picture"><img src="{% version media.image.path 'big' %}"/></div>
+  <div class="media-content detail_picture"><img src="{% version media.image.path 'big' %}"/></div>
 
-  <div><span class="html-text">{{ media.description|safe }}</span></div>
+  <div class="html-content description">{{ media.description|safe }}</div>
 
   {% include 'medialibrary/media_detail_footer.html' %}
 
