--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
@@ -5,15 +5,15 @@
     <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/audio.png" /><a href="{% url soundtrack-detail soundtrack.slug %}">{{ soundtrack.name }}</a></h2>
 
     {% if soundtrack.description %}
-      <p class="description">{{ soundtrack.description }}</p>
+      <div class="description html-content">{{ soundtrack.description }}</div>
     {% endif %}
 
     {% if soundtrack.author %}
-      <div class="author_container"><span class="author">{% trans "By" %} {{ soundtrack.author }}</span></div>
+      <div class="author_container meta-content"><span class="author">{% trans "By" %} {{ soundtrack.author }}</span></div>
     {% endif %}
 
     {% if soundtrack.tags %}
-        <div><span class="tags">
+        <div class="meta-content"><span class="tags">
           <span class="tags-label">{% trans "Tags" %}:</span>
           {% tags_for_object soundtrack as soundtrack_tags %}
           {% for tag in soundtrack_tags %}
