--- a/cyclope/templates/admin/change_form.html
+++ b/cyclope/templates/admin/change_form.html
@@ -200,37 +200,9 @@ jQuery(document).ready(function($){
 
 </script>
 
-
-
-{% comment %} CYCLOPE: drag&drop ordering of related content {% endcomment %}
-<script type="text/javascript">
-jQuery(function($) {
-    $("#cyclope-relatedcontent-self_type-self_id-group").sortable({
-        //axis: 'y',
-        placeholder: 'ui-state-highlight',
-        forcePlaceholderSize: 'true',
-        items: 'div.inline-related',
-        update: update
-    });
-    $("#cyclope-relatedcontent-self_type-self_id-group").disableSelection();
-});
-
-function update() {
-    $(this).find('div.inline-related').each(function(i) {
-            $(this).find('input[id$=order]').val(i+1);
-    });
-};
-
-jQuery(document).ready(function($){
-    $(this).find('input[id$=order]').parent('div').parent('div').hide().parent().parent().css('cursor','move');
-    $("#cyclope-relatedcontent-self_type-self_id-group .add-row a").click(function(){
-        $("#cyclope-relatedcontent-self_type-self_id-group").find('div.inline-related').each(function(i){
-            $(this).find('input[id$=order]').val(i+1);
-        })
-    });
-});
-
-</script>
+{% if original.related_contents.count >= 0 %}
+    <script type="text/javascript" src="/media/cyclope/js/drag_drop.js" />
+{% endif %}
 
 {% endblock %}
 
