fix javascript tag in admin section and collection template

--- a/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
@@ -32,10 +32,12 @@
         <img class="icon" src="{% version category.image.path 'thumbnail' %}" border="0"/>
       </a>
       {% endif %}
-
+ 
+      {% if category.description %}
       <div class="text">
         {{ category.description|safe }}
       </div>
+      {% endif %}
 
       <div class="bottom"></div>
     </div>
