--- a/cyclope/templates/admin/change_form.html
+++ b/cyclope/templates/admin/change_form.html
@@ -201,7 +201,7 @@ jQuery(document).ready(function($){
 </script>
 
 {% if original.related_contents.count >= 0 %}
-    <script type="text/javascript" src="/media/cyclope/js/drag_drop.js" />
+    <script type="text/javascript" src="/media/cyclope/js/drag_drop.js"></script>
 {% endif %}
 
 {% endblock %}
