Added WholeSiteFeed and ContentTypeFeed. Fixed ticket #11.

--- a/cyclope/templates/cyclope/themes/neutronica/base.html
+++ b/cyclope/templates/cyclope/themes/neutronica/base.html
@@ -17,9 +17,8 @@ Si modificas no borres estas lineas :)
     <title>{{ CYCLOPE_SITE_SETTINGS.global_title }}</title>
     <meta name="Keywords" content="{{ CYCLOPE_SITE_SETTINGS.keywords }}" />
     <meta name="Description" content="{{ CYCLOPE_SITE_SETTINGS.description }}" />
-    <!--
-        TODO(nicoechaniz): implement RSS
-        <link href="/rss.php" title="RSS" type="application/rss+xml" rel="alternate" /> -->
+
+    <link href="/rss" title="RSS" type="application/rss+xml" rel="alternate" />
 
     <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/html-base.css" rel="stylesheet" type="text/css" media="screen"/>
     <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/layout.css" rel="stylesheet" type="text/css" media="screen"/>
