--- a/cyclope/templates/cyclope/themes/potente/base.html
+++ b/cyclope/templates/cyclope/themes/potente/base.html
@@ -75,7 +75,7 @@ Si modificas no borres estas lineas :)
             </ul>
             -->
 
-            <div id="rss"><a href="/">Suscripción RSS</a></div>
+            <div id="rss"><a href="/rss">Suscripción RSS</a></div>
 
             <!-- EMPIEZA BANNERS -->
             <div id="banners">
