Restructured neutronica templates.

--- a/cyclope/templates/cyclope/themes/neutronica/two_sidebars.html
+++ b/cyclope/templates/cyclope/themes/neutronica/two_sidebars.html
@@ -6,6 +6,8 @@
 
 {% block page_content %}
 
+{% include "cyclope/themes/neutronica/left_sidebar_block.html" %} 
+
 <div id="right_sidebar_container" class="sidebar">
   <div class="top"></div>
   <div class="box">
