--- a/cyclope/templates/registration/logout.html
+++ b/cyclope/templates/registration/logout.html
@@ -1,10 +1,8 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
 {% load i18n %}
 
-{% block page_content %}
+{% block content %}
 
-<div id="content_container">
-  <h3>{% trans "You have logged out" %}</h3>
-</div>
+<h3>{% trans "You have logged out" %}</h3>
 
 {% endblock%}
