--- a/cyclope/templates/registration/password_reset_form.html
+++ b/cyclope/templates/registration/password_reset_form.html
@@ -1,7 +1,7 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
 {% load i18n %}
 
-{% block page_content %}
+{% block content %}
 
 <div id="content_container">
   <form action="" method="post">
