--- a/cyclope/templates/comments/preview.html
+++ b/cyclope/templates/comments/preview.html
@@ -3,9 +3,8 @@
 
 {% block title %}{% trans "Preview your comment" %}{% endblock %}
 
-{% block page_content %}
+{% block content %}
   {% load comments %}
-<div id="content_container">
 <div class="user_input">
   <form action="{% comment_form_target %}" method="post">{% csrf_token %}
     {% if next %}<input type="hidden" name="next" value="{{ next }}" />{% endif %}
@@ -34,6 +33,5 @@
     <input type="submit" name="submit" class="submit" value="{% trans "Post" %}" />
     </div>
   </form>
-</div>
 </div>
 {% endblock %}
