--- a/cyclope/templates/registration/login.html
+++ b/cyclope/templates/registration/login.html
@@ -1,9 +1,9 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
+
 {% load i18n %}
 
-{% block page_content %}
+{% block content %}
 
-<div id="content_container">
   <div class="user_input">
     <h6>{% trans "Please enter your credentials"%}</h6>
     <form action="" method="post">
@@ -18,7 +18,6 @@
      before you may login.
      {% endblocktrans %}
   </h4>
-</div>
 
 <script type="text/javascript">
     document.getElementById('id_username').focus()
