--- a/cyclope/templates/registration/password_change_form.html
+++ b/cyclope/templates/registration/password_change_form.html
@@ -1,17 +1,15 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
 {% load i18n %}
 
-{% block page_content %}
+{% block content %}
 
-<div id="content_container">
-  <div class="user_input">
-    <form enctype="multipart/form-data" method="post">
-      {{ form.as_p }}
-      <p class="submit">
-        <input type="submit" name="post" class="submit" value="{% trans "Send data" %}" />
-      </p>
-    </form>
-  </div>
+<div class="user_input">
+<form enctype="multipart/form-data" method="post">
+  {{ form.as_p }}
+  <p class="submit">
+    <input type="submit" name="post" class="submit" value="{% trans "Send data" %}" />
+  </p>
+</form>
 </div>
 
 {% endblock %}
