--- a/cyclope/templates/registration/registration_complete.html
+++ b/cyclope/templates/registration/registration_complete.html
@@ -3,9 +3,8 @@
 
 {% block title %}{% trans "Registration complete" %}.{% endblock %}
 
-{% block page_content %}
+{% block content %}
 
-<div id="content_container">
-  <h3>{% trans "Please check your e-mail and follow the provided link in order to complete your account activation." %}.</h3>
-</div>
+<h3>{% trans "Please check your e-mail and follow the provided link in order to complete your account activation." %}.</h3>
+
 {% endblock %}
