--- a/cyclope/templates/registration/registration_form.html
+++ b/cyclope/templates/registration/registration_form.html
@@ -1,21 +1,19 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
 {% load i18n %}
 
-{% block page_content%}
+{% block content%}
 
-<div id="content_container">
-  <div class="user_input">
-    <h6>
-      {% trans "Please fill in your user profile data" %}
-    </h6>
-    <form action="" method="post">{% csrf_token %}
+<div class="user_input">
+<h6>
+  {% trans "Please fill in your user profile data" %}
+</h6>
+<form action="" method="post">{% csrf_token %}
 
-    {{ form }}
-    <p class="submit">
-      <input type="submit" name="post" class="submit" value="{% trans "Register" %}" />
-    </p>
-    </form>
-  </div>
+{{ form }}
+<p class="submit">
+  <input type="submit" name="post" class="submit" value="{% trans "Register" %}" />
+</p>
+</form>
 </div>
 
 {% endblock %}
