--- a/cyclope/templates/search/search.html
+++ b/cyclope/templates/search/search.html
@@ -1,36 +1,34 @@
 {% extends CYCLOPE_DEFAULT_TEMPLATE %}
 {% load i18n cyclope_utils%}
 
-{% block page_content %}
-<div id="content_container">
-    <div id='advanced_sarch' class='user_input'>
-        <h6>{% trans "Advanced search" %}</h6>
+{% block content %}
+<div id='advanced_sarch' class='user_input'>
+    <h6>{% trans "Advanced search" %}</h6>
 
-        <form method="get" action=".">
-            {{ form }}
-            <input type="submit" class="submit" value={% trans "Search" %}>
-        </form>
-    </div>
-    {% if query %}
-        <div id="search_results" >
-            <h3>{% trans "Results" %}</h3>
-
-            {% for result in page.object_list %}
-                {# show teaser_views for all results objects #}
-                {% join result.object.get_app_label  "/" result.object.get_object_name "_teaser.html" as template_path %}
-                {% alias result.object as result.object.get_object_name %}
-                {% include template_path %}
-
-            {% empty %}
-                <p>{% trans "No results found." %}</p>
-            {% endfor %}
-
-            {% include 'cyclope/pagination_block.html' %}
-
-        </div>
-    {% else %}
-        {# TODO(diegoM): Show advanced search div #}
-        {# Show some example queries to run, maybe query syntax, something else? #}
-    {% endif %}
+    <form method="get" action=".">
+        {{ form }}
+        <input type="submit" class="submit" value={% trans "Search" %}>
+    </form>
 </div>
+{% if query %}
+    <div id="search_results" >
+        <h3>{% trans "Results" %}</h3>
+
+        {% for result in page.object_list %}
+            {# show teaser_views for all results objects #}
+            {% join result.object.get_app_label  "/" result.object.get_object_name "_teaser.html" as template_path %}
+            {% alias result.object as result.object.get_object_name %}
+            {% include template_path %}
+
+        {% empty %}
+            <p>{% trans "No results found." %}</p>
+        {% endfor %}
+
+        {% include 'cyclope/pagination_block.html' %}
+
+    </div>
+{% else %}
+    {# TODO(diegoM): Show advanced search div #}
+    {# Show some example queries to run, maybe query syntax, something else? #}
+{% endif %}
 {% endblock %}
