partial implementation of Article translation through dbgettext/rosetta

--- a/cyclope/media/css/admin_tools_theming.css
+++ b/cyclope/media/css/admin_tools_theming.css
@@ -47,7 +47,7 @@ body, .ui-widget {
 
 /* ========= change list ======== */
 
-.change-list #content, .change-form #content{ 
+.change-list #content, .change-form #content, .rosetta #content{ 
 width: 960px;
 }
 
