adapted frontend_views to the refactored FrontendView. Added missing frontend_views tests.

--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_detail.html
@@ -6,16 +6,17 @@
 
 {% alias media as 'current_object' %}
 
-<div class="content-view exterrnalcontent media detail">
+<div class="content-view externalcontent media detail">
 
   {% include 'medialibrary/media_detail_header.html' %}
 
   {% if media.image %}
   <div class="media-content">
-  <a href="{{ media.content_url }}"
-  {% if media.new_window %}target="_blank"{% endif%}>
-    <img src="{% version media.image.path 'thumbnail' %}"/>
-  </a></div>
+    <a href="{{ media.content_url }}"
+       {% if media.new_window %}target="_blank"{% endif%}>
+      <img src="{% version media.image.path 'thumbnail' %}"/>
+    </a>
+  </div>
   {% endif %}
 
   <div class="action-content download_link">
