--- a/cyclope/apps/medialibrary/templates/medialibrary/document_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_detail.html
@@ -11,9 +11,15 @@
   {% include 'medialibrary/media_detail_header.html' %}
 
   {% if media.image %}
-    <div class="media-content"><img src="{% version media.image.path 'big' %}"/></div>
+  <div class="media-content">
+    <img src="{% version media.image.path 'big' %}"/>
+  </div>
   {% endif %}
-  <div class="action-content download_link"><a href="{{ media.document }}">{% trans "download file" %}</a></div>
+
+    <div class="action-content download_link">
+      <a href="{{ media.document }}">{% trans "download file" %}
+      </a>
+    </div>
 
   <div class="html-content description">{{ media.description|safe }}</div>
 
