Fixed order and pagination for category views
H: Enter commit message.  Lines beginning with 'HG:' are removed.

--- a/cyclope/core/collections/templates/collections/category_labeled_icon_list.html
+++ b/cyclope/core/collections/templates/collections/category_labeled_icon_list.html
@@ -12,7 +12,7 @@
 
   <div class="icon_list_container">
 
-  {% for categorization in categorizations|dictsortreversed:"object_modification_date" %}
+  {% for categorization in categorizations %}
     {% join categorization.content_type.app_label  "/" categorization.content_type.model "_labeled_icon.html" as template_path %}
 
     {% comment %}
