--- a/cyclope/templates/cyclope/pagination_block.html
+++ b/cyclope/templates/cyclope/pagination_block.html
@@ -9,7 +9,7 @@
             {% endif %}
 
             <span class="current">
-               {% trans 'Page' %} {{ page.number }} {% trans 'of' %} {{ page.paginator.num_pages }}.
+               {% trans 'Page' %} {{ page.number }} {% trans 'of' %} {{ page.paginator.num_pages }}
             </span>
 
             {% if page.has_next %}
