--- a/cyclope/core/collections/templates/collections/category_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/category_teaser_list.html
@@ -10,7 +10,7 @@
   We show a teaser view of every object belonging to this category.
   {% endcomment %}
 
-  {% for categorization in categorizations|dictsortreversed:"object_modification_date" %}
+  {% for categorization in categorizations %}
     {% join categorization.content_type.app_label  "/" categorization.content_type.model "_teaser.html" as template_path %}
 
     {% comment %}
