--- a/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
+++ b/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
@@ -1,7 +1,7 @@
   {% if not region_view %}
   <div id="categories_navigation" class="{{ category.collection.slug }} {{ category.slug }}">
     {% if category.parent %}
-      <a href="{% url category-teaser_list category.parent.slug %}" class="parent">{{ category.parent.name }}</a>
+      <a href="{% url category-default category.parent.slug %}" class="parent">{{ category.parent.name }}</a>
     {% else %}
       <a href="{% url collection-root_categories_teaser_list category.collection.slug %}" class="parent">{{ category.collection.name }}</a>
     {% endif %}
@@ -9,7 +9,7 @@
     {% if category.children.all %}
       <ul>
         {% for child in category.children.all %}
-          <li> <a href="{% url category-teaser_list child.slug %}" class="children">{{ child.name }}</a> </li>
+          <li> <a href="{% url category-default child.slug %}" class="children">{{ child.name }}</a> </li>
         {% endfor %}
       </ul>
     {% endif %}
@@ -17,5 +17,5 @@
   {% endif%}
 
   {% if category.collection.visible %}
-  <div class="category_title"><a href="{% url category-teaser_list category.slug %}">{{ category.name }}</a></div>
+  <div class="category_title"><a href="{% url category-default category.slug %}">{{ category.name }}</a></div>
   {% endif %}
