--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -7,7 +7,7 @@
       <span class="pretitle">{{ article.pretitle }}<span class="pretitle-separator"> | </span></span>
       {% endif%}
       {% if article.date %}
-      <span class="date">{{ article.date }}</span>
+      <span class="date">{{ article.date|date:'DATETIME_FORMAT' }}</span>
       {% endif %}
     </div>
 
