--- a/cyclope/apps/forum/templates/forum/topic_detail.html
+++ b/cyclope/apps/forum/templates/forum/topic_detail.html
@@ -10,7 +10,7 @@
   <div class="meta-content">{% include 'collections/categories_navigation_block.html' %}</div>
 
   <h2 class="title"> {{ topic.name }} </h2>
-  <span class="submitted">{{ topic.creation_date }}</span>
+  <span class="submitted">{{ topic.creation_date|date:'DATETIME_FORMAT' }}</span>
   <div class="author_container">
     <span class="author">{{ topic.author }}</span>
     <div class="avatar">{% if avatar %}<img src="{{MEDIA_URL}}/{{ avatar }}" alt=""></img>{% endif %}</div>
