--- a/cyclope/apps/forum/templates/forum/topic_teaser.html
+++ b/cyclope/apps/forum/templates/forum/topic_teaser.html
@@ -11,7 +11,7 @@
 
     {% if not simplified_view %}
         <div class="meta-content" ><span class="author">{% trans "By" %} {{ topic.author }}</span></div>
-        <div class="meta-content" ><span class="creation-date">{{ topic.creation_date }}</span></div>
+        <div class="meta-content" ><span class="creation-date">{{ topic.creation_date|date:'DATETIME_FORMAT' }}</span></div>
         {% get_comment_count for topic as comment_count %}
         <div class="meta-content" ><span class="replies-count">{% trans "Replies" %}: {{ comment_count }}</span></div>
     {% endif %}
