--- a/cyclope/core/collections/templates/collections/category_list_as_forum.html
+++ b/cyclope/core/collections/templates/collections/category_list_as_forum.html
@@ -18,8 +18,8 @@
      <tr>
        <td><a href="{{ obj.url }}">{{ obj.name }}</a></td>
        <td>{{ obj.comments_count }}</td>
-       <td>{{ obj.creation_date }}{% if obj.author %} {% trans 'by' %} {{ obj.author }} {% endif %}</td>
-       <td>{% if obj.last_comment_date %}{{ obj.last_comment_date }}  {% trans 'by' %} {{ obj.last_comment_author }} {% endif %}</td>
+       <td>{{ obj.creation_date|date:'DATETIME_FORMAT' }}{% if obj.author %} {% trans 'by' %} {{ obj.author }} {% endif %}</td>
+       <td>{% if obj.last_comment_date %}{{ obj.last_comment_date|date:'DATETIME_FORMAT' }}  {% trans 'by' %} {{ obj.last_comment_author }} {% endif %}</td>
       </tr>  
       {% endfor %}
   </table>
